clang/test/BSC/Negative/Method/Struct/struct_instance_function_many_arguments/struct_instance_function_many_arguments.cbs
// RUN: %clang_cc1 -verify %s

struct Foo {
    int a;
};
int struct Foo::getA(struct Foo* this) { // expected-note {{'getA' declared here}}
    return this->a;
}

int main() {
    struct Foo foo;
    foo.getA(&foo); // expected-error {{too many arguments to function call, expected 0, have 1}}
    return 0;
}